--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
 # PostgreSQL connection string from Neon
-DATABASE_URL=postgresql://user:password@host:5432/dbname?sslmode=require
+# DATABASE_URL=postgresql://user:password@host:5432/dbname?sslmode=require
 
 # JWT secret for auth (generate a strong random one)
-SECRET_KEY=your-very-long-random-secret-here-change-this
+# SECRET_KEY=your-very-long-random-secret-here-change-this
 
 # Other secrets (add as needed)
 # REDIS_URL=redis://localhost:6379
